--- a/Página-Inicial.html
+++ b/Página-Inicial.html
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Página Inicial">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt"><header class="u-clearfix u-header u-header" id="sec-1867"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt"><header class="u-clearfix u-header u-header" id="sec-1867"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
